--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_rel_layout">
 
         <Button
+            android:id="@+id/btn_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -42,6 +43,7 @@
             android:text="@string/from_date" />
 
         <Button
+            android:id="@+id/btn_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -58,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/btn_rel_layout">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
