--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -2,11 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/grey">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:padding="10dp"
+        app:cardCornerRadius="4dp"
+        app:cardMaxElevation="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
@@ -20,11 +25,13 @@
                 android:layout_alignParentTop="true">
 
                 <TextView
+                    android:layout_alignParentStart="true"
                     android:id="@+id/txt_full_country_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_centerInParent="true"
                     android:id="@+id/txt_country_short"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
