--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -9,12 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:padding="10dp"
+        android:padding="5dp"
         app:cardCornerRadius="4dp"
         app:cardMaxElevation="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -63,6 +64,7 @@
                     android:weightSum="2">
 
                     <TextView
+                        android:maxLines="2"
                         android:text="Confirmed Cases"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -84,6 +86,7 @@
                     android:weightSum="2">
 
                     <TextView
+                        android:maxLines="2"
                         android:text="Recovered Cases"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -105,6 +108,7 @@
                     android:weightSum="2">
 
                     <TextView
+                        android:maxLines="2"
                         android:text="Deaths Cases"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
