--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_rel_layout">
 
         <Button
+            android:background="@drawable/btn_border"
             android:id="@+id/btn_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
             android:text="@string/from_date" />
 
         <Button
+            android:background="@drawable/btn_border"
             android:id="@+id/btn_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,11 +73,18 @@
         android:layout_marginBottom="200dp"
         app:layout_constraintTop_toBottomOf="@id/btn_rel_layout">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_details"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     </RelativeLayout>
 
