--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,7 +14,8 @@
         android:layout_margin="0dp"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="DashBoard">
 
     </androidx.appcompat.widget.Toolbar>
 
