--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:padding="5dp"
         app:cardCornerRadius="4dp"
         app:cardMaxElevation="8dp"
         app:layout_constraintTop_toTopOf="parent">
@@ -71,6 +70,7 @@
                         android:layout_weight="1" />
 
                     <TextView
+                        android:gravity="center"
                         android:id="@+id/txt_confirmed_cases_numbers"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_centerInParent="true"
+                    android:layout_centerHorizontal="true"
                     android:id="@+id/layout_recovered_cases"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,6 +93,7 @@
                         android:layout_weight="1" />
 
                     <TextView
+                        android:gravity="center"
                         android:id="@+id/txt_recovered_cases_numbers"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -115,6 +116,7 @@
                         android:layout_weight="1" />
 
                     <TextView
+                        android:gravity="center"
                         android:id="@+id/txt_deaths_cases_numbers"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
