Edited SwipeRefreshLayout code

--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -66,6 +66,7 @@
                         android:maxLines="2"
                         android:text="@string/confirmed_cases"
                         android:layout_width="0dp"
+                        android:textSize="8sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
@@ -87,6 +88,7 @@
 
                     <TextView
                         android:maxLines="2"
+                        android:textSize="8sp"
                         android:text="@string/recovered_cases"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -112,6 +114,7 @@
                         android:maxLines="2"
                         android:text="@string/deaths_cases"
                         android:layout_width="0dp"
+                        android:textSize="8sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
