--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#6200EE</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="grey">#e6e6e6</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="blue">#0000FF </color>
+    <color name="red">#FF0000 </color>
+    <color name="yellow">#FFFF00 </color>
+    <color name="black">#000000</color>
 
 </resources>
