--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -128,38 +128,42 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <ScrollView
                 android:layout_below="@id/prevention_title"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:orientation="horizontal">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/image_1"
+                        android:layout_margin="10dp"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:src="@mipmap/ic_launcher"
+                        app:civ_border_width="2dp" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/image_1"
-                    android:layout_margin="10dp"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:src="@mipmap/ic_launcher"
-                    app:civ_border_width="2dp" />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/image_2"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="10dp"
+                        android:src="@mipmap/ic_launcher"
+                        app:civ_border_width="2dp" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/image_2"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:layout_margin="10dp"
-                    android:src="@mipmap/ic_launcher"
-                    app:civ_border_width="2dp" />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/image_3"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="10dp"
+                        android:src="@mipmap/ic_launcher"
+                        app:civ_border_width="2dp" />
+                </LinearLayout>
+            </ScrollView>
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/image_3"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:layout_margin="10dp"
-                    android:src="@mipmap/ic_launcher"
-                    app:civ_border_width="2dp" />
-            </LinearLayout>
 
             <!-- <androidx.appcompat.widget.AppCompatSpinner
                  android:id="@+id/sp_countries"
