Edited SwipeRefreshLayout code

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,203 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_margin="0dp"
-                android:background="@color/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </RelativeLayout>
-
-            </androidx.appcompat.widget.Toolbar>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="@drawable/dashboard_background"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:text="COVID-19"
-                        android:textColor="@color/white"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <androidx.appcompat.widget.AppCompatSpinner
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="30dp"
-                        android:backgroundTint="@color/white"
-                        android:textSize="24sp" />
-
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:text="Are you Feeling sick"
-                        android:textColor="@color/white"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:text="If you are feeling sick with any of the covid-19 symptoms please cal or SMS us immediately for help"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
-
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginStart="30dp"
-                        android:background="@drawable/red_background"
-                        android:drawableStart="@drawable/ic_call_foreground"
-                        android:padding="10dp"
-                        android:text="Call Now" />
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="30dp"
-                        android:background="@drawable/button_background_blue"
-                        android:drawableStart="@drawable/ic_sms_foreground"
-                        android:padding="10dp"
-                        android:text="Send SMS" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-                <TextView
-                    android:id="@+id/prevention_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:text="@string/title_prevention"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/prevention_title">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginEnd="30dp"
-                        android:orientation="horizontal">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/image_1"
-                            android:layout_width="96dp"
-                            android:layout_height="96dp"
-                            android:layout_margin="10dp"
-                            android:src="@mipmap/ic_launcher"
-                            app:civ_border_width="2dp" />
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/image_2"
-                            android:layout_width="96dp"
-                            android:layout_height="96dp"
-                            android:layout_margin="10dp"
-                            android:src="@mipmap/ic_launcher"
-                            app:civ_border_width="2dp" />
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/image_3"
-                            android:layout_width="96dp"
-                            android:layout_height="96dp"
-                            android:layout_margin="10dp"
-                            android:src="@mipmap/ic_launcher"
-                            app:civ_border_width="2dp" />
-                    </LinearLayout>
-                </ScrollView>
-
-
-                <!-- <androidx.appcompat.widget.AppCompatSpinner
-                     android:id="@+id/sp_countries"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginStart="10dp"
-                     android:layout_marginTop="10dp"
-                     android:layout_marginEnd="10dp"
-                     android:layout_marginBottom="10dp"
-                     android:prompt="@string/select_country"
-                     android:spinnerMode="dropdown"
-                     android:textAlignment="center" />-->
-            </RelativeLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="20dp"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="10dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/coronavirus_covid19_closeup" />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-    </ScrollView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
