--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -9,13 +9,13 @@
         android:scrollbars="none">
 
         <LinearLayout
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.Toolbar
-                android:layout_marginTop="20dp"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
@@ -46,7 +46,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="290dp"
                 android:background="@drawable/dashboard_background"
                 android:orientation="vertical">
 
@@ -59,10 +59,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:text="COVID-19"
+                        android:text="@string/covid_19"
+                        android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:layout_width="80dp"
@@ -70,7 +73,14 @@
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="30dp"
                         android:backgroundTint="@color/white"
-                        android:textSize="24sp" />
+                        android:textSize="24sp"
+                        android:id="@+id/sp_countries"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:prompt="@string/select_country"
+                        android:spinnerMode="dropdown"
+                        android:textAlignment="center"/>
 
                 </RelativeLayout>
 
@@ -84,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:text="Are you Feeling sick"
+                        android:text="@string/are_you_feeling_sick"
                         android:textColor="@color/white"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -93,7 +103,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:text="If you are feeling sick with any of the covid-19 symptoms please cal or SMS us immediately for help"
+                        android:text="@string/if_you_are_feeling_sick_with_any_of_the_covid_19_symptoms_please_cal_or_sms_us_immediately_for_help"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
 
@@ -169,8 +179,9 @@
                                 app:civ_border_width="2dp" />
 
                             <TextView
+                                android:gravity="center"
                                 android:text="@string/avoid_close_contact"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textSize="12sp"
                                 android:textColor="@color/black" />
@@ -191,8 +202,9 @@
                                 app:civ_border_width="2dp" />
 
                             <TextView
+                                android:gravity="center"
                                 android:text="@string/clean_your_hand_n_often"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textSize="12sp"
                                 android:textColor="@color/black" />
@@ -212,9 +224,10 @@
                                 app:civ_border_width="2dp" />
 
                             <TextView
+                                android:gravity="center"
                                 android:text="@string/wear_a_face_mask"
                                 android:textAlignment="center"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textSize="12sp"
                                 android:textColor="@color/black" />
@@ -240,17 +253,10 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="5dp"
-                android:layout_marginBottom="40dp"
                 app:cardElevation="10dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/coronavirus_covid19_closeup" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
