--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -58,7 +58,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="20dp"
                         android:text="@string/covid_19"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -71,7 +71,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="30dp"
+                        android:layout_marginEnd="20dp"
                         android:backgroundTint="@color/white"
                         android:textSize="24sp"
                         android:id="@+id/sp_countries"
@@ -93,7 +93,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="20dp"
                         android:text="@string/are_you_feeling_sick"
                         android:textColor="@color/white"
                         android:textSize="24sp"
@@ -102,7 +102,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="20dp"
                         android:text="@string/if_you_are_feeling_sick_with_any_of_the_covid_19_symptoms_please_cal_or_sms_us_immediately_for_help"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
@@ -119,7 +119,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="20dp"
                         android:background="@drawable/red_background"
                         android:drawableStart="@drawable/ic_call_foreground"
                         android:padding="10dp"
@@ -129,7 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="30dp"
+                        android:layout_marginEnd="20dp"
                         android:background="@drawable/button_background_blue"
                         android:drawableStart="@drawable/ic_sms_foreground"
                         android:padding="10dp"
@@ -148,7 +148,7 @@
                     android:id="@+id/prevention_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="20dp"
                     android:text="@string/title_prevention"
                     android:textColor="@color/black"
                     android:textSize="20sp"
@@ -161,8 +161,9 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:layout_marginStart="30dp"
-                        android:layout_marginEnd="30dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
