--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -64,13 +64,32 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/activity_title">
 
-        <com.google.android.material.tabs.TabLayout
+        <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:background="@drawable/tablayout_background"
             android:id="@+id/tl_main_statistics"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="@dimen/_48sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:clipToPadding="false"
+            android:paddingLeft="@dimen/_12sdp"
+            android:paddingRight="@dimen/_12sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:stl_defaultTabTextColor="@color/white"
+            app:stl_defaultTabTextHorizontalPadding="18dp"
+            app:stl_defaultTabTextSize="@dimen/_10ssp"
+            app:stl_distributeEvenly="true"
+            app:stl_dividerColor="@android:color/transparent"
+            app:stl_dividerThickness="0dp"
+            app:stl_indicatorColor="#26000000"
+            app:stl_indicatorCornerRadius="18dp"
+            app:stl_indicatorGravity="center"
+            app:stl_indicatorInterpolation="smart"
+            app:stl_indicatorThickness="36dp"
+            app:stl_underlineColor="@android:color/transparent"
+            app:stl_underlineThickness="0dp">
 
-        </com.google.android.material.tabs.TabLayout>
+        </com.ogaclejapan.smarttablayout.SmartTabLayout>
 
         <androidx.viewpager.widget.ViewPager
             android:layout_below="@id/tl_main_statistics"
