--- a/app/src/main/res/layout/global_fragment.xml
+++ b/app/src/main/res/layout/global_fragment.xml
@@ -16,6 +16,35 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:weightSum="3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:textSize="18sp"
+                android:gravity="center_horizontal"
+                android:text="@string/total"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:textSize="18sp"
+                android:gravity="center_horizontal"
+                android:text="@string/today"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:textSize="18sp"
+                android:gravity="center_horizontal"
+                android:text="@string/yesterday"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="2">
