--- a/app/src/main/res/drawable/full_white_background.xml
+++ b/app/src/main/res/drawable/full_white_background.xml
@@ -6,8 +6,6 @@
         android:left="2dp"
         android:right="2dp"
         android:top="2dp" />
-    <corners android:radius="60dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"/>
+    <corners android:radius="60dp" />
 
 </shape>
