--- a/app/src/main/res/layout/global_fragment.xml
+++ b/app/src/main/res/layout/global_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/full_dashboard_background">
 
     <LinearLayout
@@ -16,33 +16,37 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:weightSum="3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:weightSum="3">
+
             <TextView
-                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/total"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:textSize="12sp" />
+
             <TextView
-                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/today"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:textSize="12sp" />
+
             <TextView
-                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/yesterday"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:textSize="12sp" />
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,8 +73,14 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/affected"
-                        android:textSize="20sp"
+                        android:textSize="8sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -79,7 +89,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="345786"
-                        android:textSize="28sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
 
@@ -105,8 +115,14 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/deaths"
-                        android:textSize="20sp"
+                        android:textSize="8sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -115,7 +131,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="3456"
-                        android:textSize="28sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
 
@@ -146,8 +162,14 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/recovered"
-                        android:textSize="20sp"
+                        android:textSize="8sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -156,7 +178,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="3456"
-                        android:textSize="28sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -181,8 +203,14 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/active"
-                        android:textSize="20sp"
+                        android:textSize="8sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -191,7 +219,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="3456"
-                        android:textSize="28sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -216,8 +244,14 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/serious"
-                        android:textSize="20sp"
+                        android:textSize="8sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -226,7 +260,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="3456"
-                        android:textSize="28sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
