--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -16,7 +16,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -34,74 +34,89 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <RelativeLayout
-        android:id="@+id/activity_title"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="@string/title_statistics"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_title">
-
-        <com.ogaclejapan.smarttablayout.SmartTabLayout
-            android:background="@drawable/tablayout_background"
-            android:id="@+id/tl_main_statistics"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_48sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:clipToPadding="false"
-            android:paddingLeft="@dimen/_12sdp"
-            android:paddingRight="@dimen/_12sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:stl_defaultTabTextColor="@color/white"
-            app:stl_defaultTabTextHorizontalPadding="18dp"
-            app:stl_defaultTabTextSize="@dimen/_10ssp"
-            app:stl_distributeEvenly="true"
-            app:stl_dividerColor="@android:color/transparent"
-            app:stl_dividerThickness="0dp"
-            app:stl_indicatorColor="#26000000"
-            app:stl_indicatorCornerRadius="18dp"
-            app:stl_indicatorGravity="center"
-            app:stl_indicatorInterpolation="smart"
-            app:stl_indicatorThickness="36dp"
-            app:stl_underlineColor="@android:color/transparent"
-            app:stl_underlineThickness="0dp">
+            android:layout_height="match_parent">
 
-        </com.ogaclejapan.smarttablayout.SmartTabLayout>
+            <RelativeLayout
+                android:id="@+id/activity_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.viewpager.widget.ViewPager
-            android:layout_below="@id/tl_main_statistics"
-            android:id="@+id/vp_region"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@string/title_statistics"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-    </RelativeLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layout_tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/activity_title">
+
+                <com.ogaclejapan.smarttablayout.SmartTabLayout
+                    android:id="@+id/tl_main_statistics"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_48sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:background="@drawable/tablayout_background"
+                    android:clipToPadding="false"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingRight="@dimen/_12sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:stl_defaultTabTextColor="@color/white"
+                    app:stl_defaultTabTextHorizontalPadding="18dp"
+                    app:stl_defaultTabTextSize="@dimen/_10ssp"
+                    app:stl_distributeEvenly="true"
+                    app:stl_dividerColor="@android:color/transparent"
+                    app:stl_dividerThickness="0dp"
+                    app:stl_indicatorColor="#26000000"
+                    app:stl_indicatorCornerRadius="18dp"
+                    app:stl_indicatorGravity="center"
+                    app:stl_indicatorInterpolation="smart"
+                    app:stl_indicatorThickness="36dp"
+                    app:stl_underlineColor="@android:color/transparent"
+                    app:stl_underlineThickness="0dp">
+
+                </com.ogaclejapan.smarttablayout.SmartTabLayout>
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/vp_region"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_below="@id/tl_main_statistics"
+                    android:layout_marginTop="10dp" />
 
 
-    <androidx.constraintlayout.widget.Guideline
+            </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+    <!--<androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,15 +128,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="3000dp"
+        android:layout_height="300dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline">
+        android:background="@drawable/half_dashboard_background"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/half_dashboard_background" />
-    </LinearLayout>
+    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
