Edited SwipeRefreshLayout code

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -61,6 +61,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="@string/covid_19"
+                        android:layout_alignParentStart="true"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="24sp"
@@ -78,7 +79,6 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:prompt="@string/select_country"
                         android:textAlignment="center"
                         android:layout_height="wrap_content"
                         app:ccp_defaultNameCode="UG"
@@ -86,13 +86,6 @@
                         app:ccp_showFullName="false"
                         app:ccp_showNameCode="true"
                         />
-                    <!--<com.hbb20.CountryCodePicker
-                        android:id="@+id/ccp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:ccp_showFullName="true"
-                        app:ccp_showPhoneCode="false"
-                        app:ccp_showNameCode="false"/>-->
 
                 </RelativeLayout>
 
@@ -128,23 +121,33 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="150sp"
+                        android:layout_height="50dp"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="20dp"
                         android:background="@drawable/red_background"
                         android:drawableStart="@drawable/ic_call_foreground"
                         android:padding="10dp"
+                        android:textSize="14sp"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
                         android:text="Call Now" />
 
                     <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="150sp"
+                        android:layout_height="50dp"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="20dp"
                         android:background="@drawable/button_background_blue"
                         android:drawableStart="@drawable/ic_sms_foreground"
                         android:padding="10dp"
+                        android:textSize="14sp"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
                         android:text="Send SMS" />
 
                 </RelativeLayout>
@@ -172,6 +175,7 @@
                     android:layout_below="@id/prevention_title">
 
                     <LinearLayout
+                        android:gravity="center_horizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
@@ -266,7 +270,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="5dp"
                 app:cardBackgroundColor="@color/grey"
